# hydro

./: InRiver_Potential_Data.csv  LICENSE  README.md  Village_Location.csv  desktop.ini  pyproject.toml  rodeoanalysis.py
.github/workflows/: ci.yml
data/: Citation  InRiver_Potential_Data.csv  Village_Location.csv
notebooks/: rodeoanalysis.py
